# bootstrap.c_cmake

./: .travis.yml  AUTHORS  NEWS.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
tests/: cookiecutterrc  test_new_repo.sh
{{ cookiecutter.project_slug }}/: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  NEWS.md  README.md  configure
{{ cookiecutter.project_slug }}/doc/: CMakeLists.txt  Doxyfile-common.in  Doxyfile-dev.in
{{ cookiecutter.project_slug }}/src/: CMakeLists.txt  config.h.in  {{ cookiecutter.pkg_name }}.c  {{ cookiecutter.pkg_name }}.h
{{ cookiecutter.project_slug }}/tests/: CMakeLists.txt  cminitests.h  test_{{ cookiecutter.pkg_name }}.c  test_{{ cookiecutter.pkg_name }}.sh
